# GammaDaemon

./: .gitignore  Cargo.toml  LICENSE  README.md  conf.toml  designDoc.txt  example_config.toml  test_config.toml
.github/.github/: dependabot.yml
.github/.github/workflows/: Publish.yml  audit.yml  main.yml  rust-clippy.yml
.github/workflows/: Publish  audit.yml  ethicalcheck.yml  main.yml  test_code_coverage.yml
src/: daemon.rs  main.rs
src/daemon/: file_paths.rs  mod.rs  read_file.rs
src/daemon/config/: mod.rs
