[package]
name = "gamma_daemon"
description = "Changes screen brightness (Gamma) based on notebook battery life"
license = "MIT"
version = "0.1.0"
edition = "2021"



[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1


[dependencies]
battery = "0.7.8"
bulbb = "0.0.3"
daemonize = "0.5.0"
toml = "0.7.3"
serde = {version = "1.0.159", features = ["derive"]}
