[package]
name = "gamma_daemon"
description = "Changes screen brightness based on notebook battery life"
license = "MIT"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/trollLemon/GammaDaemon"
documentation = "https://github.com/trollLemon/GammaDaemon"
homepage = "https://github.com/trollLemon/GammaDaemon"
readme = "README.md"
keywords = ["daemon", "backlight"]


[profile.release]
opt-level = "z"
strip = true
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false
codegen-units = 1
rpath = false



[dependencies]
battery = "0.7.8"
bulbb = "0.0.3"
daemonize = "0.5.0"
toml = "0.7.6"
serde = {version = "1.0.188", features = ["derive"]}
